# wwdates

./: .codespellrc  .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitlint  .hadolint.yaml  .pre-commit-config.yaml  .pydocstyle  .shellcheckrc  .sqlfluff  .sqlfluffignore  .yamllint  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  mkdocs_hooks.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  tasks.sh
.github/: CLAUDE.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: changelog.yaml  docs.yaml  release_pypi.yaml  release_test_pypi.yaml  tests.yaml
docs/: CLAUDE.md  api.md  changelog.md  contributing.md  examples.md  faq.md  index.md  usage.md
docs/backlog/: dehydrate-calendars.md  dehydrate-calendars_20260704_130854.md
docs/javascripts/: header-version.js
docs/stylesheets/: version-badge.css
overrides/: main.html
src/wwdates/: __init__.py  main.py
src/wwdates/_internal/: __init__.py
src/wwdates/_internal/config/: CLAUDE.md  __init__.py
src/wwdates/_internal/config/contracts/: __init__.py  anbima_holidays.py  example_source.py
src/wwdates/_internal/utils/: CLAUDE.md  __init__.py  br_identifiers.py  dtypes.py  http_downloader.py  logs.py  logs_emitter.py  retry.py  tabular_reader.py  text.py  zip_extractor.py
src/wwdates/_internal/utils/cache/: cache_manager.py
src/wwdates/_internal/utils/calendars/: __init__.py  _abc_calendar.py  _calendar_core.py  _date_formatter.py  _date_manipulation.py  _date_timezone_aware.py  _dates_current.py  _dates_range_delta.py  abc_calendar_operations.py
src/wwdates/_internal/utils/parsers/: dicts.py  html.py  str.py
src/wwdates/_internal/utils/typing/: __init__.py  abc_type_checker.py  decorators.py  protocol_type_checker.py  type_checker.py  validate.py
src/wwdates/_internal/utils/webdriver_tools/: playwright_wd.py
src/wwdates/br/: __init__.py  anbima.py  b3.py  febraban.py
src/wwdates/us/: __init__.py  federal_holidays.py  federal_holidays_web.py  nasdaq.py
tests/integration/: test_bin_scripts.py
tests/unit/: test_cache_manager.py  test_calendar_abc.py  test_calendar_br.py  test_calendar_usa.py  test_main.py
