[tool.poetry]
name = "wwdates"
version = "0.0.1"
description = "A Python library for worldwide holidays, comprehensive date operations and formatting."
authors = ["guilhermegor"]
readme = "README.md"
license = "MIT"
homepage = "https://example.com/wwdates"
repository = "https://github.com/guilhermegor/wwdates"
keywords = ["wwdates", "python", "library"]
packages = [{ include = "wwdates", from = "src" }]
# Keep internal dev docs out of the distributed wheel/sdist.
exclude = ["src/**/CLAUDE.md"]
package-mode = true
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/guilhermegor/wwdates/issues"
"Source" = "https://github.com/guilhermegor/wwdates"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# Required by the private _internal helpers (dtypes / tabular_reader / config.contracts).
pandas = ">=2.1.0"
openpyxl = ">=3.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.1.0"
pretty-errors = ">=1.2.25"
commitizen = ">=4.4.1"
poetry-plugin-export = ">=1.8"
# Build + publish tooling for the PyPI / Test-PyPI release workflows (twine is the
# publish fallback when `poetry publish` is unavailable).
build = ">=1.2.2"
twine = ">=6.1.0"
# Pinned to the ruff-pre-commit hook minor (.pre-commit-config.yaml) so `make
# lint` and the hook never disagree on formatting/lints.
ruff = ">=0.11.13,<0.12"
codespell = ">=2.4.1"
pydocstyle = ">=6.3.0"
pytest = ">=8.0.0"
pytest-cov = ">=6.0.0"
coverage = ">=7.6.0"
# genbadge replaces the abandoned coverage-badge (it imported the removed
# pkg_resources and breaks on setuptools >= 81).
genbadge = {extras = ["coverage"], version = ">=1.1.0"}
# Static type-checker + non-Python lint gates (mirrored in .pre-commit-config and
# `make lint`). shellcheck + shfmt are pip dev-deps (shellcheck-py/shfmt-py); lint_shell.sh resolves them via poetry run, falls back to a system binary, then skips.
mypy = ">=1.8.0"
sqlfluff = ">=3.0.0"
yamllint = ">=1.35.0"
shfmt-py = ">=3.7.0"
shellcheck-py = ">=0.10.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
pymdown-extensions = ">=10.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
