[tool.poetry]
name = "wwdates"
version = "0.1.0"
description = "Global calendar system. Python package."
authors = ["guilhermegor"]
readme = "README.md"
license = "MIT"
homepage = "https://guilhermegor.github.io/wwdates/"
documentation = "https://guilhermegor.github.io/wwdates/"
repository = "https://github.com/guilhermegor/wwdates"
keywords = ["wwdates", "python", "library"]
packages = [{ include = "wwdates", from = "src" }]
# Keep internal dev docs out of the distributed wheel/sdist.
exclude = ["src/**/CLAUDE.md"]
package-mode = true
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/guilhermegor/wwdates/issues"
"Source" = "https://github.com/guilhermegor/wwdates"
"Documentation" = "https://guilhermegor.github.io/wwdates/"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# Required by the private _internal helpers (dtypes / tabular_reader / config.contracts).
pandas = ">=2.1.0"
openpyxl = ">=3.1.0"
requests = "^2.34.2"
businesstimedelta = "^1.0.1"
python-dateutil = "^2.9.0.post0"
xlrd = "^2.0.2"
lxml = "^6.1.1"
tzdata = "^2026.2"
holidays = "^0.99"
# Optional — only DatesUSFederalHolidaysWeb (the live-scrape provider) needs a browser.
# Installed via the `web` extra: pip install "wwdates[web]".
playwright = { version = "^1.61.0", optional = true }

[tool.poetry.extras]
# `pip install "wwdates[web]"` adds Playwright for the live-scrape DatesUSFederalHolidaysWeb
# provider. After installing, run `playwright install chromium` once to fetch the browser.
web = ["playwright"]

[tool.commitizen]
# Conventional-commit driven changelog. `make bump_version` regenerates CHANGELOG.md from the
# commit history; the version is read from [tool.poetry] so there is a single source of truth.
name = "cz_conventional_commits"
version_provider = "poetry"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.1.0"
pretty-errors = ">=1.2.25"
commitizen = ">=4.4.1"
poetry-plugin-export = ">=1.8"
# Build + publish tooling for the PyPI / Test-PyPI release workflows (twine is the
# publish fallback when `poetry publish` is unavailable).
build = ">=1.2.2"
twine = ">=6.1.0"
# Pinned to the ruff-pre-commit hook minor (.pre-commit-config.yaml) so `make
# lint` and the hook never disagree on formatting/lints.
ruff = ">=0.11.13,<0.12"
codespell = ">=2.4.1"
pydocstyle = ">=6.3.0"
pytest = ">=8.0.0"
pytest-cov = ">=6.0.0"
coverage = ">=7.6.0"
# genbadge replaces the abandoned coverage-badge (it imported the removed
# pkg_resources and breaks on setuptools >= 81).
genbadge = {extras = ["coverage"], version = ">=1.1.0"}
# Static type-checker + non-Python lint gates (mirrored in .pre-commit-config and
# `make lint`). shellcheck + shfmt are pip dev-deps (shellcheck-py/shfmt-py); lint_shell.sh resolves them via poetry run, falls back to a system binary, then skips.
mypy = ">=1.8.0"
sqlfluff = ">=3.0.0"
yamllint = ">=1.35.0"
shfmt-py = ">=3.7.0"
shellcheck-py = ">=0.10.0"
pytest-mock = "^3.15.1"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
pymdown-extensions = ">=10.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
